Fix icons fill color in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -16,11 +16,13 @@ body{
 .dark{
     background-color: #333;
     color: whitesmoke;
+    fill: white;
 }
 
 .light{
     background-color: whitesmoke;
     color: #333;
+    fill: #333;
 }
 
 
@@ -42,6 +44,9 @@ header {
     justify-content: space-between;
 }
 
+
+
+
 .nav-lists{
     list-style: none;
     display: flex;
@@ -55,7 +60,8 @@ header {
 .icons{
     width: 100%;
     height: 100%;
-    fill: #333;
+    fill: inherit;
+    cursor: pointer;
 }
 
 main{
